Name:                sparkle
Version:             0
Synopsis:            Planning tool designed for high school technology students
Category:            Web

Description:
    /Sparkle/ is a planning tool designed for high school technology
    students. It aims to help students manage the time they spend on
    their projects, and guide through the thought processes needed for
    them to succeed.

Homepage:            https://github.com/lfairy/sparkle
Bug-Reports:         https://github.com/lfairy/sparkle/issues

Author:              Chris Wong
Maintainer:          lambda.fairy@gmail.com

License:             AGPL-3
License-File:        LICENSE
Copyright:           2013 Chris Wong

Build-Type:          Simple
Extra-Source-Files:  README.mkd
Cabal-Version:       >= 1.8


Executable sparkle
    Main-Is:     Main.hs
    Build-Depends:
        base == 4.*,
        bytestring,
        containers,
        mtl,
        text,
        unordered-containers,
        vector,

        lens,
        semigroups,

        happstack-server == 7.3.*,

        aeson >= 0.6.2,

        blaze-html,
        blaze-markup,

        -- Version 1.2.2 doesn't compile on network < 2.4
        hslogger >= 1.2.3,

        -- Newer versions require stm >= 2.4
        acid-state == 0.8.*,
        safecopy,

        -- See <http://stackoverflow.com/q/18424469/617159>
        boomerang >= 1.4.0,
        web-routes,
        web-routes-happstack,
        web-routes-boomerang >= 0.28.0

    Other-Modules:
        Data.List.NonEmpty.SafeCopy
        Sparkle
        Sparkle.API
        Sparkle.API.Routes
        Sparkle.API.Handlers
        Sparkle.Common
        Sparkle.Handlers
        Sparkle.Routes
        Sparkle.Templates
        Sparkle.Types

    GHC-Options: -Wall


Source-Repository head
    Type:     git
    Location: https://github.com/lfairy/sparkle.git
